*SVN*

* Make sure has_many uses :include when counting [danger]

* Change the implementation of ActiveRecord's attribute reader and writer methods [nzkoz]
 - Generate Reader and Writer methods which cache attribute values in hashes.  This is to avoid repeatedly parsing the same date or integer columns.
 - Change exception raised when users use find with :select then try to access a skipped column.  Plugins could override missing_attribute() to lazily load the columns.
 - Move method definition to the class, instead of the instance
 - Always generate the readers, writers and predicate methods.


* Perform a deep #dup on query cache results so that modifying activerecord attributes does not modify the cached attributes.  [Rick]

# Ensure that has_many :through associations use a count query instead of loading the target when #size is called.  Closes #8800 [lifo]

* Added :unless clause to validations #8003 [monki]. Example: 

    def using_open_id?
      !identity_url.blank?
    end

    validates_presence_of :identity_url, :if => using_open_id?
    validates_presence_of :username, :unless => using_open_id?
    validates_presence_of :password, :unless => using_open_id?

* Fix #count on a has_many :through association so that it recognizes the :uniq option.  Closes #8801 [lifofifo]

* Fix and properly document/test count(column_name) usage. Closes #8999 [lifofifo]

* Remove deprecated count(conditions=nil, joins=nil) usage.  Closes #8993 [lifofifo]

* Change belongs_to so that the foreign_key assumption is taken from the association name, not the class name.  Closes #8992 [hasmanyjosh]

  OLD
    belongs_to :visitor, :class_name => 'User' # => inferred foreign_key is user_id
    
  NEW
    belongs_to :visitor, :class_name => 'User' # => inferred foreign_key is visitor_id

* Remove spurious tests from deprecated_associations_test, most of these aren't deprecated, and are duplicated in associations_test.  Closes #8987 [lifofifo]
